<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hongji.Hongji1fFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_car_1f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_car_1f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="260dp" />

    <ImageView
        android:id="@+id/image_hongji1f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/hongji1fmap"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/overlay_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_maker"
        app:layout_constraintTop_toTopOf="@id/hongji1f"
        app:layout_constraintStart_toStartOf="@id/hongji1f"
        android:visibility="gone"
        tools:ignore="MissingConstraints,NotSibling"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text_hongji1f1"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/string_hongji1f_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/image_hongji1f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_1f_1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="569dp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_hongji1f2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/string_hongji1f_2"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_car_1f_2"
        app:layout_constraintTop_toBottomOf="@id/image_hongji1f"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>